# interop-gh-comment

./: gh-comment.py  pyproject.toml  responses.py
gh_comment/: main.py  responses.py
